# zer2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.production.yaml  configuration.yaml  dDockerfileold  docker-compose-t.yml  docker-compose.yaml  logfile  sqlx-data.json
.github/workflows/: main.yaml
__MACOSX/: ._Cargo.toml  ._Dockerfile  ._configuration.local.yaml  ._configuration.production.yaml  ._configuration.yaml  ._sqlx-data.json
__MACOSX/tests/api/: ._subscriptions_confirm.rs
migrations/: 20230325201126_create_subscription_tokens_table.sql  20230510192923_drop_salt_from_users.sql
proptest-regressions/domain/: subsrciber_email.txt
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: admin.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  password.rs
src/routes/admin/password/: get.rs  logout.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
