[package]
name = "zero2prod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
config = { version = "0.13.3", features = ["yaml"] }
lambda-web = { version = "0.2.1", features = ["actix4"] }
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", features = ["macros", "postgres", "runtime-actix-rustls", "uuid", "time", "migrate", "offline"] }
time = "0.3.21"
tokio = "1.28.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
validator = "0.16.0"
reqwest = { version = "0.11.17", features = ["cookies", "rustls-tls", "json"] }
serde_json = "1.0.96"
linkify = "0.9.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
base64 = "0.21.0"
argon2 = { version = "0.5.0", features = ["std"] }
urlencoding = "2.1.2"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
fake = "2.6.*"
rusty-hook = "0.11.2"
url = "2.3.*"
futures = "0.3.*"
proptest = "1.1.0"
rand = "0.8.5"
wiremock = "0.5.18"

[hooks]
pre-commit = "cargo test"
pre-push = ["cargo check", "cargo fmt -- --check"]

[logging]
verbose = true
